<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/reload_menu"
        android:icon="@drawable/ic_reload"
        android:title="@string/reload"
        app:showAsAction="ifRoom|withText" />
</menu>